--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             display: block;
             position: absolute;
             outline:0;
+            alpha:true;
+            premultipliedAlpha:true;
         }
 
         footer {
