--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
             display: block;
             position: absolute;
             outline:0;
-            alpha:true;
-            premultipliedAlpha:true;
         }
 
         footer {
@@ -60,6 +58,7 @@
 
     <script>
 
+
         function patchInitialized(patch) {
             // You can now access the patch object (patch), register variable watchers and so on
         }
@@ -76,6 +75,10 @@
                 glCanvasResizeToWindow: true,
                 onPatchLoaded: patchInitialized,
                 onFinishedLoading: patchFinishedLoading,
+                canvas:{
+                  alpha:true,
+                  premultipliedAlpha:true
+                }
             });
         });
     </script>
