--- a/index.html
+++ b/index.html
@@ -41,11 +41,24 @@
         footer a:active {
             color: #24baa7;
         }
+
+        #myVideo {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+        }
     </style>
 
 </head>
 
 <body>
+      <!-- The video -->
+    <video autoplay muted loop id="myVideo">
+      <source src="sfondo platform.mp4" type="video/mp4">
+    </video>
+
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
     <footer>
         made with <a href='https://cables.gl'>cables</a>
@@ -76,7 +89,7 @@
                 onFinishedLoading: patchFinishedLoading,
                 canvas:{
                     alpha:true,
-                    premultipliedAlpha:true
+                    premultipliedAlpha:true,
                 }
             });
         });
