--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             display: block;
             position: absolute;
             outline:0;
+            z-index: -1;
         }
 
         footer {
