--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <style>
         body {
             margin: 0;
+            background-color: transparent;
             color: #fff;
             font-family: Helvetica, Arial, sans-serif;
         }
