--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
       <!-- The video -->
     <video autoplay muted loop id="myVideo">
-      <source src="sfondo platform.mp4" type="video/mp4">
+      <source src="assets/sfondo platform.mp4" type="video/mp4">
     </video>
 
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
