--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
         footer a:active {
             color: #24baa7;
         }
+
+        .center {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 50%;
+        }
     </style>
 
 </head>
 
 <body>
+    <img src="assets/Logo_mobile.png" width="481" height"107" class="center">
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
     <footer>
         made with <a href='https://cables.gl'>cables</a>
