--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           margin-left: auto;
           margin-right: auto;
           width: 50%;
+          z-index: +1;
         }
     </style>
 
