--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 </head>
 
 <body>
+  <video autoplay muted loop id="myVideo">
+  <source src="assets_aboutus/sfondo platform.mp4" type="video/mp4">
+  </video>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
     <footer>
         made with <a href='https://cables.gl'>cables</a>
