--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body>
   <video autoplay muted loop id="myVideo">
-  <source src="assets_aboutus/sfondo platform.mp4" type="video/mp4">
+  <source src="assets/sfondo platform.mp4" type="video/mp4">
   </video>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
     <footer>
