--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                 glCanvasResizeToWindow: true,
                 onPatchLoaded: patchInitialized,
                 onFinishedLoading: patchFinishedLoading,
+                canvas:{
+                    alpha:true,
+                    premultipliedAlpha:true,
+                }
             });
         });
     </script>
