--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             display: block;
             position: absolute;
             outline:0;
+            z-index: +1;
         }
 
         footer {
@@ -52,7 +53,7 @@
     </video>
 
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    
+
 
     <libs/>
     <script type="text/javascript" src="js/patch.js" async></script>
