--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         body {
             margin: 0;
-            background-color: #000;
+            background-color: red;
             color: #fff;
             font-family: Helvetica, Arial, sans-serif;
         }
@@ -47,7 +47,7 @@
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    
+
 
     <video autoplay muted loop id="myVideo">
     <source src="assets/sfondo platform.mp4" type="video/mp4">
