--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         body {
             margin: 0;
-            background-color: red;
+            background-color: #fff;
             color: #fff;
             font-family: Helvetica, Arial, sans-serif;
         }
