--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    <video autoplay muted loop id="myVideo">
+    <!-- <video autoplay muted loop id="myVideo">
     <source src="assets/sfondo platform.mp4" type="video/mp4">
-    </video>
+    </video> -->
 
     <libs/>
     <script type="text/javascript" src="js/patch.js" async></script>
