--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
     <source src="assets/sfondo platform.mp4" type="video/mp4">
     </video>
 
+<div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>
+</div>
     <libs/>
     <script type="text/javascript" src="js/patch.js" async></script>
     <corelibs/>
+
 
     <script>
 
@@ -79,6 +83,10 @@
                   premultipliedAlpha: true,
                 }
             });
+        });
+
+        $(window).on("load",function(){
+          $(".loader-wrapper").fadeOut("slow");
         });
     </script>
 </body>
