--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         footer a:active {
             color: #24baa7;
         }
+
+        .provalogo {
+          width: 50%;
+          height: auto;
+          margin:auto;
+        }
     </style>
 
 </head>
@@ -51,6 +57,7 @@
     <video autoplay muted loop id="myVideo">
     <source src="assets/sfondo platform.mp4" type="video/mp4">
     </video>
+    <img class="provalogo" src="assets/5fdb4bc97949dc1492c5a2ed_Logo.png"></img>
 
 <div class="loader-wrapper">
     <span class="loader"><span class="loader-inner"></span></span>
