--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    <video autoplay muted loop id="myVideo">
+    <!-- <video autoplay muted loop id="myVideo">
     <source src="assets/sfondo platform.mp4" type="video/mp4">
-    </video>
+    </video> -->
     <img class="provalogo" src="assets/5fdb4bc97949dc1492c5a2ed_Logo.png"></img>
 
 <div class="loader-wrapper">
