--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             margin: 0;
             background-color: #fff;
-            color: #fff;
+            color: red;
             font-family: Helvetica, Arial, sans-serif;
         }
 
