--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <style>
         body {
             margin: 0;
-            background-color: #fff;
-            color: red;
+            background-color: red;
+            color: #fff;
             font-family: Helvetica, Arial, sans-serif;
         }
 
