--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         .provalogo {
           width: 50%;
           height: auto;
-          margin:auto;
+          margin: auto;
+          display: block;
           z-index:+2;
         }
     </style>
