--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         body {
             margin: 0;
-            background-color: red;
+            background-color: #000;
             color: #fff;
             font-family: Helvetica, Arial, sans-serif;
         }
@@ -22,7 +22,6 @@
             display: block;
             position: absolute;
             outline:0;
-            z-index: +1;
         }
 
         footer {
@@ -42,31 +41,20 @@
         footer a:active {
             color: #24baa7;
         }
-
-        .provalogo {
-          width: 50%;
-          height: auto;
-          margin: auto;
-          z-index:+2;
-        }
     </style>
 
 </head>
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    <!-- <video autoplay muted loop id="myVideo">
-    <source src="assets/sfondo platform.mp4" type="video/mp4">
-    </video> -->
-    <img class="provalogo" src="assets/5fdb4bc97949dc1492c5a2ed_Logo.png"></img>
+    <footer>
+        made with <a href='https://cables.gl'>cables</a>
+        <!-- we would greatly appreciate if you link cables somewhere on your site! and tell us your website! thanks <3 :) -->
+    </footer>
 
-<div class="loader-wrapper">
-    <span class="loader"><span class="loader-inner"></span></span>
-</div>
     <libs/>
     <script type="text/javascript" src="js/patch.js" async></script>
     <corelibs/>
-
 
     <script>
 
@@ -86,15 +74,7 @@
                 glCanvasResizeToWindow: true,
                 onPatchLoaded: patchInitialized,
                 onFinishedLoading: patchFinishedLoading,
-                canvas:{
-                  alpha: true,
-                  premultipliedAlpha: true,
-                }
             });
-        });
-
-        $(window).on("load",function(){
-          $(".loader-wrapper").fadeOut("slow");
         });
     </script>
 </body>
